--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@ yarn.lock
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+creds.txt
