changes of drop down and file type fix

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dropdown_search: ^6.0.1
   google_sign_in: ^6.2.2
   firebase_auth: ^5.4.1
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
