--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_sign_in: ^6.2.2
   firebase_auth: ^5.4.1
   video_player: ^2.9.2
+  razorpay_flutter: ^1.3.7
 
 dev_dependencies:
   flutter_test:
@@ -97,6 +98,7 @@ flutter:
     - assets/spalsh/
     - assets/personalize/img11.png
     - assets/personalize/img12.png
+    - assets/appIcon/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
