--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   firebase_auth: ^5.4.1
   video_player: ^2.9.2
   razorpay_flutter: ^1.3.7
+  file_picker: ^8.3.7
+  image_cropper: ^9.0.0
 
 dev_dependencies:
   flutter_test:
