--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   razorpay_flutter: ^1.3.7
   file_picker: ^8.3.7
   image_cropper: ^9.0.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
